kubernetes/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /argocd/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - fklska.asuscomm.com
    secretName: minio-tls-secret
